[package]
name = "life_game"
version = "0.1.0"
authors = ["Kadoi Takemaru <kadoitakemaru0902@g.ecc.u-tokyo.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { git = "https://github.com/rust-lang-nursery/rand" }
